--- a/index.html
+++ b/index.html
@@ -19,37 +19,82 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <div class="nav">
+
+    <nav class="dif-nav navbar navbar-expand-lg navbar-light">
+
         <div class="logo">
             <img src="img/LOGO.jpg" alt="">
         </div>
-        <div class="option">
-            <ul>
-                <li><a href="product.html">商品分類</a>
-                    <ul>
-                        <li><a href="#">❀底妝</a></li>
-                        <li><a href="#">❀眼妝</a></li>
-                        <li><a href="#">❀唇頰</a></li>
-                        <li><a href="#">❀洗卸</a></li>
-                        <li><a href="#">❀保養</a></li>
-                    </ul>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        商品分類
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">❀底妝</a>
+                        <a class="dropdown-item" href="#">❀眼妝</a>
+                        <a class="dropdown-item" href="#">❀唇頰</a>
+                        <a class="dropdown-item" href="#">❀洗卸</a>
+                        <a class="dropdown-item" href="#">❀保養</a>
+                    </div>
                 </li>
-                <li class=><a href="#">折扣活動</a>
-                    <ul>
-                        <li><a href="#">【12th生日慶🎂】天天搶$28</a></li>
-                        <li><a href="#">【12th 生日慶】加碼買再送！</a></li>
-                        <li><a href="#">【限時搶購】全館滿額贈好禮</a></li>
-                        <li><a href="#">【APP獨享】限量搶$99up</a></li>
-                        <li><a href="#">【可愛爆棚】泡泡先生系列</a></li>
-                    </ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        折扣活動
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">【12th生日慶🎂】天天搶$28</a>
+                        <a class="dropdown-item" href="#">【12th 生日慶】加碼買再送！</a>
+                        <a class="dropdown-item" href="#">【限時搶購】全館滿額贈好禮</a>
+                        <a class="dropdown-item" href="#">【APP獨享】限量搶$99up</a>
+                        <a class="dropdown-item" href="#">【可愛爆棚】泡泡先生系列</a>
+                    </div>
                 </li>
-                <li><a href="notice.html">購物說明</a></li>
-                <li><a class="lk" href="lookbook.html">LOOKBOOK</a></li>
+                <a class="nav-link" href="#">LOOKBOO <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">購物說明</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
             </ul>
+            <div>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="dif-search form-control mr-sm-2" type="search" placeholder="Search"
+                        aria-label="Search">
+                    <a type="submit">
+                        <img class="search" src="img/icon/search.png" alt="">
+                    </a>
+                    </input>
+                </form>
+            </div>
+
         </div>
-    </div>
-    <div class="container">123</div>
-    <script src="" async defer></script>
+    </nav>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
