完成自定義navbar

--- a/index.html
+++ b/index.html
@@ -60,25 +60,36 @@
                         <a class="dropdown-item" href="#">【可愛爆棚】泡泡先生系列</a>
                     </div>
                 </li>
-                <a class="nav-link" href="#">LOOKBOO <span class="sr-only">(current)</span></a>
+                <a class="dif-nav-option nav-link" href="#">LOOKBOOK <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">購物說明</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-            </ul>
-            <div>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="dif-search form-control mr-sm-2" type="search" placeholder="Search"
-                        aria-label="Search">
-                    <a type="submit">
-                        <img class="search" src="img/icon/search.png" alt="">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        會員專區
                     </a>
-                    </input>
-                </form>
-            </div>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">登入</a>
+                        <a class="dropdown-item" href="#">註冊</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">購物車(0)</a>
+                        <a class="dropdown-item" href="#">心願清單(0)</a>
+                    </div>
+        </div>
+        </li>
+        </ul>
+        <div>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="dif-search form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <a type="submit">
+                    <img class="search" src="img/icon/search.png" alt="">
+                </a>
+                </input>
+            </form>
+        </div>
+
 
         </div>
     </nav>
