--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -54,13 +52,14 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">【12th生日慶🎂】天天搶$28</a>
-                        <a class="dropdown-item" href="#">【12th 生日慶】加碼買再送！</a>
                         <a class="dropdown-item" href="#">【限時搶購】全館滿額贈好禮</a>
+                        <a class="dropdown-item" href="#">【12th 生日慶】加碼買再送！</a>
                         <a class="dropdown-item" href="#">【APP獨享】限量搶$99up</a>
                         <a class="dropdown-item" href="#">【可愛爆棚】泡泡先生系列</a>
                     </div>
                 </li>
-                <a class="dif-nav-option nav-link" href="#">LOOKBOOK <span class="sr-only">(current)</span></a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">LOOKBOOK <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">購物說明</a>
@@ -71,16 +70,15 @@
                         會員專區
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">登入</a>
+                        <a class="dropdown-item" href="#">登錄</a>
                         <a class="dropdown-item" href="#">註冊</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">購物車(0)</a>
-                        <a class="dropdown-item" href="#">心願清單(0)</a>
+                        <a class="dropdown-item" href="#">心願清單心願清單(0)</a>
                     </div>
-        </div>
-        </li>
-        </ul>
-        <div>
+                </li>
+
+            </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="dif-search form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <a type="submit">
@@ -88,12 +86,7 @@
                 </a>
                 </input>
             </form>
-        </div>
-
-
-        </div>
     </nav>
-
 
 
 
