投影片完成

--- a/index.html
+++ b/index.html
@@ -87,9 +87,33 @@
                 </input>
             </form>
     </nav>
+    <div class="slidebox">
+          <div class="img-slider">
+            <div class="slide active">
+              <img src="img/slider/new_slider_01.jpg" alt="">
+            </div>
+            <div class="slide">
+              <img src="img/slider/new_slider_02.jpg" alt="">
+            </div>
+            <div class="slide">
+              <img src="img/slider/new_slider_03.jpg" alt="">
+            </div>
+            <div class="slide">
+              <img src="img/slider/new_slider_04.jpg" alt="">
+            </div>
+            <div class="navigation">
+              <div class="btn active"></div>
+              <div class="btn"></div>
+              <div class="btn"></div>
+              <div class="btn"></div>
+            </div> 
+    </div>
+           
+        </div>
 
-
-
+   
+      
+    <script src="js/slide.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
