--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="btn"></div>
             </div>
         </div>
-        <div class="middle container">
+        <div class="middle">
             <img src="img/newline.png" alt="">
         </div>
         <div class="product container">
