--- a/index.html
+++ b/index.html
@@ -88,33 +88,28 @@
             </form>
     </nav>
     <div class="slidebox">
-        <div class="img-slider">
+        <div class="img-slider container">
             <div class="slide active">
-                <img src="img/slider/new_slider_01.jpg" alt="">
+              <img src="img/slider/new_slider_01.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="img/slider/new_slider_02.jpg" alt="">
+              <img src="img/slider/new_slider_02.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="img/slider/new_slider_03.jpg" alt="">
+              <img src="img/slider/new_slider_03.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="img/slider/new_slider_04.jpg" alt="">
+              <img src="img/slider/new_slider_04.jpg" alt="">
             </div>
             <div class="navigation">
-                <div class="btn active"></div>
-                <div class="btn"></div>
-                <div class="btn"></div>
-                <div class="btn"></div>
+              <div class="dif-btn active"></div>
+              <div class="dif-btn"></div>
+              <div class="dif-btn"></div>
+              <div class="dif-btn"></div>
             </div>
-        </div>
-        <div class="middle">
-            <img src="img/newline.png" alt="">
-        </div>
-        <div class="product container">
-            
-        </div>
-
+          </div>
+    </div>
+  
 
 
         <script src="js/slide.js"></script>
