--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
             </div>
           </div>
     </div>
-  
+    <div class="container">
+        <img class="middle-line" src="img/newline.png" alt="">
+    </div>
+    <div class="container">
+        
+    </div>
 
 
         <script src="js/slide.js"></script>
