放上所有物件跟排版

--- a/index.html
+++ b/index.html
@@ -90,43 +90,141 @@
     <div class="slidebox">
         <div class="img-slider container">
             <div class="slide active">
-              <img src="img/slider/new_slider_01.jpg" alt="">
+                <img src="img/slider/new_slider_01.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="img/slider/new_slider_02.jpg" alt="">
+                <img src="img/slider/new_slider_02.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="img/slider/new_slider_03.jpg" alt="">
+                <img src="img/slider/new_slider_03.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="img/slider/new_slider_04.jpg" alt="">
+                <img src="img/slider/new_slider_04.jpg" alt="">
             </div>
             <div class="navigation">
-              <div class="dif-btn active"></div>
-              <div class="dif-btn"></div>
-              <div class="dif-btn"></div>
-              <div class="dif-btn"></div>
+                <div class="dif-btn active"></div>
+                <div class="dif-btn"></div>
+                <div class="dif-btn"></div>
+                <div class="dif-btn"></div>
             </div>
-          </div>
+        </div>
     </div>
-    <div class="container">
+    <div class="line-con container">
         <img class="middle-line" src="img/newline.png" alt="">
     </div>
-    <div class="container">
-        
+    <div class="new-product container">
+        <div class="row">
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_01.jpg" alt="">
+                <div class="content">
+                    <h6>【生日慶買再送】<br>1028 服服貼貼遮瑕膏</h6>
+                    <p><span style="color: black">原價NT$180&nbsp;</span><span style="color: red">特價NT$139</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_02.jpg" alt="">
+                <div class="content">
+                    <h6>【生日慶買再送】<br>1028 空氣定格粉餅(三款任選)</h3>
+                    <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$331</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_03.jpg" alt="">
+                <div class="content">
+                    <h6>【生日慶買再送】<br>1028 調眼色限量眼彩盤(兩色任選)</h3>
+                    <p><span style="color: black">原價NT$420&nbsp;</span><span style="color: red">特價NT$319</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_04.jpg" alt="">
+                <div class="content">
+                    <h6>【生日慶買再送】<br>1028 飛激長瞬翹防水睫毛膏</h3>
+                    <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$299</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+        <!-- </div> -->
+        <!-- <div class="row"> -->
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_05.jpg" alt="">
+                <div class="content">
+                    <h6>【生日慶買再送】<br> 1028 精算師持色細眉筆(三色任選)</h3>
+                    <p><span style="color: black">原價NT$180&nbsp;</span><span style="color: red">特價NT$139</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md-">
+                <img class="new-product" src="img/new_06.jpg" alt="">
+                <div class="content">
+                    <h6>1028 Oil Cut!超吸油嫩蜜粉(三款任選)</h3>
+                    <p><span style="color: black">原價NT$290&nbsp;</span><span style="color: red">特價NT$239</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_07.png" alt="">
+                <div class="content">
+                    <h6>【春夏色系】<br>1028 唇迷心竅好色唇釉(六色任選)</h6>
+                    <p><span style="color: black">原價NT$350&nbsp;</span><span style="color: red">特價NT$269</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+            <div class="col col-md- col-sm-">
+                <img class="new-product" src="img/new_08.png" alt="">
+                <div class="content">
+                    <h6>1028 Oil Control!超控油UV校色飾底乳(四款任選)</h6>
+                    <p><span style="color: black">原價NT$350&nbsp;</span><span style="color: red">特價NT$269</span> </p>
+                </div>
+                <div class="like">
+                    <img class="like" src="img/icon/icon_03(1).png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
-
-
-        <script src="js/slide.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
+    <div class="line ">
+        <img src="img/linepage.png" alt="">
+    </div>
+    <div class="container">
+        <div class="bottom_img">
+        <div class="box">
+            <img src="img/APP_01.jpg" alt="">
+        </div>
+        <div class="box">
+            <img src="img/APP_02.jpg" alt="">
+        </div>
+        <div class="box">
+            <img src="img/APP_03.jpg" alt="">
+        </div>
+    </div>
+    </div>
+    
+    <script src="js/slide.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
