--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <img class="new-product" src="img/new_02.jpg" alt="">
                 <div class="content">
                     <h6>【生日慶買再送】<br>1028 空氣定格粉餅(三款任選)</h3>
-                    <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$331</span> </p>
+                        <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$331</span> </p>
                 </div>
                 <div class="like">
                     <img class="like" src="img/icon/icon_03(1).png" alt="">
@@ -138,7 +138,7 @@
                 <img class="new-product" src="img/new_03.jpg" alt="">
                 <div class="content">
                     <h6>【生日慶買再送】<br>1028 調眼色限量眼彩盤(兩色任選)</h3>
-                    <p><span style="color: black">原價NT$420&nbsp;</span><span style="color: red">特價NT$319</span> </p>
+                        <p><span style="color: black">原價NT$420&nbsp;</span><span style="color: red">特價NT$319</span> </p>
                 </div>
                 <div class="like">
                     <img class="like" src="img/icon/icon_03(1).png" alt="">
@@ -148,19 +148,19 @@
                 <img class="new-product" src="img/new_04.jpg" alt="">
                 <div class="content">
                     <h6>【生日慶買再送】<br>1028 飛激長瞬翹防水睫毛膏</h3>
-                    <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$299</span> </p>
+                        <p><span style="color: black">原價NT$390&nbsp;</span><span style="color: red">特價NT$299</span> </p>
                 </div>
                 <div class="like">
                     <img class="like" src="img/icon/icon_03(1).png" alt="">
                 </div>
             </div>
-        <!-- </div> -->
-        <!-- <div class="row"> -->
+            <!-- </div> -->
+            <!-- <div class="row"> -->
             <div class="col col-md- col-sm-">
                 <img class="new-product" src="img/new_05.jpg" alt="">
                 <div class="content">
                     <h6>【生日慶買再送】<br> 1028 精算師持色細眉筆(三色任選)</h3>
-                    <p><span style="color: black">原價NT$180&nbsp;</span><span style="color: red">特價NT$139</span> </p>
+                        <p><span style="color: black">原價NT$180&nbsp;</span><span style="color: red">特價NT$139</span> </p>
                 </div>
                 <div class="like">
                     <img class="like" src="img/icon/icon_03(1).png" alt="">
@@ -170,7 +170,7 @@
                 <img class="new-product" src="img/new_06.jpg" alt="">
                 <div class="content">
                     <h6>1028 Oil Cut!超吸油嫩蜜粉(三款任選)</h3>
-                    <p><span style="color: black">原價NT$290&nbsp;</span><span style="color: red">特價NT$239</span> </p>
+                        <p><span style="color: black">原價NT$290&nbsp;</span><span style="color: red">特價NT$239</span> </p>
                 </div>
                 <div class="like">
                     <img class="like" src="img/icon/icon_03(1).png" alt="">
@@ -201,30 +201,106 @@
     <div class="line ">
         <img src="img/linepage.png" alt="">
     </div>
-    <div class="container">
+    <div class="bottom-con container">
         <div class="bottom_img">
-        <div class="box">
-            <img src="img/APP_01.jpg" alt="">
-        </div>
-        <div class="box">
-            <img src="img/APP_02.jpg" alt="">
-        </div>
-        <div class="box">
-            <img src="img/APP_03.jpg" alt="">
+            
+                <div class="box-btm">
+                <img src="img/APP_01.jpg" alt="">
+            </div>
+            <div class="box-btm">
+                <img src="img/APP_02.jpg" alt="">
+            </div>
+            <div class="box-btm">
+                <img src="img/APP_03.jpg" alt="">
+            </div>
+
         </div>
     </div>
+    <div class="lineb"></div> 
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <table class="table table-borderless">
+                        <thead>
+                          <tr>
+                            <th scope="col">關於我們</th>
+                            <th scope="col">購物說明</th>
+                            <th scope="col">客服資訊</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td><a href="#">品牌故事</a></td>
+                            <td><a href="#">客服留言</a></td>
+                            <td><a href="#">客服留言</a></td>
+                          </tr>
+                          <tr>
+                            <td><a href="#">商店簡介</a></td>
+                            <td><a href="#">常見問題</a></td>
+                            <td><a href="#">客服留言</a></td>
+                          </tr>
+                          <tr>
+                            <td><a href="#">隱私權條款</a></td>
+                            <td><a href="#">會員權益聲明</a></td>
+                            <td><a href="#">客服留言</a></td>
+                          </tr>
+                          <tr>
+                            <td></td>
+                            <td></td>
+                            <td><a href="#">隱私權條款</a></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                </div>
+                <div class="col">
+                    <div class="box box-ic">
+                        <img class="icon icon1" src="img/icon/icon_fb.png" alt="">
+                        <img class="icon" src="img/icon/icon_ig.png" alt="">
+                        <img class="icon" src="img/icon/icon_line.png" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="box-1">
+                         <img class="qr" src="img/QRcode.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="footer_text">
+                <p> © 2020 1038_final_project. All rights reserved</p>
+             </div>
+        </div>
+    </div>   
+    <div class="lineb2"></div> 
+    <div class="footer-for-480">
+        <div class="row">
+            <div class="col">
+                <div class="box480">
+                    <img class="icon480" src="img/icon/icon_fb.png" alt="">
+                    <img class="icon480" src="img/icon/icon_ig.png" alt="">
+                    <img class="icon480" src="img/icon/icon_line.png" alt="">
+                </div>
+            </div>
+            <div class="col">
+                <div class="box480-1">
+                     <img class="qr" src="img/QRcode.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="footer_text">
+           <p> © 2020 1038_final_project. All rights reserved</p>
+        </div>
     </div>
-    
-    <script src="js/slide.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        <script src="js/slide.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
