加上網頁之間的連結

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="product.html" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         商品分類
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">❀底妝</a>
+                        <a class="dropdown-item" href="product.html">❀底妝</a>
                         <a class="dropdown-item" href="#">❀眼妝</a>
                         <a class="dropdown-item" href="#">❀唇頰</a>
                         <a class="dropdown-item" href="#">❀洗卸</a>
