--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
     <nav class="dif-nav navbar navbar-expand-lg navbar-light">
 
         <div class="logo">
-            <img src="img/LOGO.jpg" alt="">
+            <a href="index.html"><img src="img/LOGO.jpg" alt=""></a>
         </div>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
