--- a/product.html
+++ b/product.html
@@ -90,7 +90,7 @@
     <div class="container">
         <ul class="nav nav-tabs justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" href="#">底妝</a>
+              <a class="dif-a nav-link active" href="#">底妝</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">眼妝</a>
@@ -105,6 +105,22 @@
                 <a class="nav-link" href="#">保養</a>
               </li>
           </ul>
+    </div>
+    <div class="container">
+        <div class="pd-box">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div>
+            <div class="row"></div>
+        </div>
+        
     </div>
     <div class="lineb"></div> 
     <div class="footer">
